ligolang/src/test/contracts/negative/switch_jsligo/break_outside_case2.jsligo
let fn = (n : int) : string => {
    let output = "Hello";
    if (output == "") {
        break;
    } else {
        output = output + " World";
    }
    return output;
};